Changes in 0.60.13:
  * Added repository interfaces for deleting users and groups.
  * Added a repository iterator function to list the members of a group.
  * The web interface to the Conary repository now has a repository
    contents browser, accessible either from the main page (if you are
    logged into the web interface), or from the /browse url. Example:
        http://conary.example.com/conary/browse
  * A bug preventing all access to the web interface if an anonymous
    user existed has been fixed.
  * "Large" updates are split into multiple pieces which are downloaded
     and installed independently of one another
  * Trove updates are tracked through collections
  * Group handling completely rewritten to function as a three way merge
    instead of a set of heuristics
  * Trove removal handles references troves which are referenced by multiple
    collections
  * Rollback format unified for local and nonlocal rollbacks
  * Dependency ordering forces collections to be installed after all of their
    referenced troves (allowing simple restarts)
  * Database migration removes stale versions
  * --replace-files marks the replaced versions of the files as no longer
    present
  * Troves store information about Install Bins - not used yet.
    By specifying a component's install bin, which is a set of key-value 
    pairs, you can describe whether two versions of a component are 
    installable side-by-side.  If two versions of the component share the
    same keys for their install bins, but at least one different value, then
    the components are installable side-by-side.
  * Troves store information about troves loaded when building a recipe
  * Build Requirements are stored with the trove 
  * Add isCollection() to TroveInfo

Changes in 0.60.12:
  * Previously, if you ran "conary update foo", and foo requires a new
    version of bar, but updating to the new version of bar would break
    existing dependencies of other troves on the system, a very