@@ -80,7 +80,7 @@
                         <td style="text-align: right;">
                             <a href="chPassForm?username=${user[1]}">Change Password</a> | 
                             <u>Groups</u> | 
-                            <u>Delete</u>
+                            <a href="deleteUser?username=${user[1]}">Delete</a>
                         </td>
                     </tr>
                 </tbody>
@@ -89,7 +89,7 @@
 
             <h2>Groups</h2>
             <table class="user-admin" id="groups">
-                <thead><tr><td style="width: 25%;">Group Name</td><td>Permissions</td></tr></thead>
+                <thead><tr><td style="width: 25%;">Group Name</td><td>Permissions</td><td>Options</td></tr></thead>
                 <tbody>
                     <tr py:for="i, group in enumerate(netAuth.iterGroups())"
                         class="${i % 2 and 'even' or 'odd'}">
@@ -99,6 +99,7 @@
                         <td><b>${group[1]}</b></td>
                         <td py:if="rows" py:content="permTable(group[0], rows)"/>
                         <td py:if="not rows" style="font-size: 80%;">Group has no permissions</td>
+                        <td><a href="deleteGroup?userGroupId=${group[0]}">Delete</a> | <a href="manageGroupForm?userGroupName=${group[1]}">Manage</a></td>
                     </tr>
                 </tbody>
             </table>
